Complete basic console with cat, ls, cd

--- a/Themes/Counter Strike/Source/index.html
+++ b/Themes/Counter Strike/Source/index.html
@@ -63,24 +63,24 @@
 		  </div>
 		</div>
         <div id="data-string" style="display: none">
-            <div id="welcome-txt">============================================================================ 
-=..........................................................................= 
-=.......................... Welcome to my website .........................= 
-=.............. I'm not a big fan of CS, just love this theme .............= 
-=...................... (the game is playable, btw) .......................= 
-=..........................................................................= 
-============================================================================ 
-
-
-Media by: Counter Strike 1.6 Source | This console: myself
-CSConsole Version: 1.0.1
-Use 'help' for, you know, help.
-
-</div>
-        <div id="about_me-txt">Hello, i.</div>
-        <div id="this_website_on_github-txt">Hello, i.</div>
-        <div id="about_me-txt">Hello, i.</div>
-        <div id="about_me-txt">Hello, i.</div>
-        <div id="about_me-txt">Hello, i.</div>
+            <dir name="root">
+                <dir name="about_me">
+                    <dir name="test">
+                        <file name="justtest-txt"></file>
+                    </dir>
+                    <file name="who_am_i-txt"></file>
+                    <file name="what_i_love-txt"></file>
+                    <file name="things_im_good_at-txt"></file>
+                    <file name="stuff_i_made-txt"></file>
+                    <file name="my_activity-txt"></file>
+                </dir>
+                <dir name="my_notes"></dir>
+                <dir name="books_i_read"></dir>
+                <dir name="software"></dir>
+                
+                <file name="welcome-txt"></file>
+                <file name="this_website_on_github-txt">
+                </file>
+            </dir>
     </body>
 </html>
