--- a/Themes/Counter Strike/Source/play/index.html
+++ b/Themes/Counter Strike/Source/play/index.html
@@ -21,6 +21,7 @@
 
         <script type="text/javascript" src="js/CSGame.js"></script>
         <script type="text/javascript" src="js/CSPlayer.js"></script>
+        <script type="text/javascript" src="js/CSBullet.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
