--- a/Themes/Counter Strike/Source/play/index.html
+++ b/Themes/Counter Strike/Source/play/index.html
@@ -20,6 +20,11 @@
         <script type="text/javascript" src="js/lib/easeljs-0.7.1.min.js"></script>
 
         <script type="text/javascript" src="js/CSGame.js"></script>
+        <script type="text/javascript" src="js/CSGameConfig.js"></script>
+
+
+        <script type="text/javascript" src="js/CSThing.js"></script>
+
         <script type="text/javascript" src="js/CSPlayer.js"></script>
         <script type="text/javascript" src="js/CSBullet.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
