Update start menu item

--- a/Themes/Windows 7/Source/index.html
+++ b/Themes/Windows 7/Source/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Welcome!</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="icon" type="image/png" href="css/images/icon.ico">
+        <link rel="icon" type="image/png" href="css/images/favicon.ico">
 
         <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="css/font/segoeui.css">
@@ -32,7 +32,64 @@
             </desktop>
         	<taskbar>
                 <startmenupanel>
-                    <div id="recent_program"></div>
+                    <div id="recent_program">
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/netbeans.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>Netbeans 6.9.1</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/chrome.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>Google Chrome</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/paint.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>Paint</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/cstrike.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>Counter Strike 1.6</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/war3.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>World of Warcraft</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item">
+                            <div class="icon">
+                                <img src="images/icons/photoshop.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>Photoshop CS6</span>
+                            </div>
+                        </div>
+                        <div id="bottom_bar">
+                            <div id="all_programs">
+                                <img src="css/images/right_arrow.png" /> <span>All Programs</span>
+                            </div>
+                            <div id="search_box">
+                                <input type="text" placeholder="Search program and files" />
+                            </div>
+                        </div>
+                    </div>
                     <div id="shortcuts">
                         <h1>Đinh Quang Trung</h1>
                         <h1>Documents</h1>
