--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -17,7 +17,7 @@
 
         <script type="text/javascript" src="../shared/js/dqt.js"></script>
         <script type="text/javascript" src="js/windows.js"></script>
-        <script type="text/javascript" src="js/appmanager.js"></script>
+        <script type="text/javascript" src="js/appmanager.js?2"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
@@ -41,9 +41,18 @@
         	<taskbar>
                 <startmenupanel>
                     <div id="recent_program">
+                        <div class="recent_program_item" appname="wordpress">
+                            <div class="icon">
+                                <img src="images/icons/wordpress.png" />
+                            </div>
+                            <div class="program_name">
+                                <span>My blog</span>
+                            </div>
+                        </div>
+
                         <div class="recent_program_item" appname="cstrike">
                             <div class="icon">
-                                <img src="images/icons/cstrike.png" />
+                                <img src="images/icons/cstrike.png"/>
                             </div>
                             <div class="program_name">
                                 <span>Counter Strike 1.6</span>
