--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -37,6 +37,20 @@
                     </div>
                 </icon>
             </desktop>
+            <windows>
+                <window>
+                    <titlebar>
+                        <span class="window_title">
+                        Control Panel
+                        </span>
+                        <span class="window_controls">
+                            <span class="control min"><span class="sprite_icon min"></span></span><span class="control max"><span class="sprite_icon max"></span></span><span class="control close"><span class="sprite_icon close"></span></span>
+                        </span>
+                    </titlebar>
+                    <content>
+                    </content>
+                </window>
+            </windows>
         	<taskbar>
                 <startmenupanel>
                     <div id="recent_program">
