--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -40,16 +40,29 @@
             <windows>
                 <window>
                     <titlebar>
-                        <span class="window_title">
-                        Control Panel
-                        </span>
+                        <img src="images/icons/netbeans.png" alt="icon"/>
+                        <span class="window_title">Control Panel</span>
                         <span class="window_controls">
                             <span class="control min"><span class="sprite_icon min"></span></span><span class="control max"><span class="sprite_icon max"></span></span><span class="control close"><span class="sprite_icon close"></span></span>
                         </span>
                     </titlebar>
                     <content>
+                        asd
                     </content>
                 </window>
+                <window class="max">
+                    <titlebar>
+                        <img src="images/icons/cstrike.png" alt="icon"/>
+                        <span class="window_title">Hello</span>
+                        <span class="window_controls">
+                            <span class="control min"><span class="sprite_icon min"></span></span><span class="control max"><span class="sprite_icon max"></span></span><span class="control close"><span class="sprite_icon close"></span></span>
+                        </span>
+                    </titlebar>
+                    <content>
+                        ertert
+                    </content>
+                </window>
+
             </windows>
         	<taskbar>
                 <startmenupanel>
