--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -17,6 +17,7 @@
 
         <script type="text/javascript" src="../shared/js/dqt.js"></script>
         <script type="text/javascript" src="js/windows.js"></script>
+        <script type="text/javascript" src="js/windowsmanager.js"></script>
         <script type="text/javascript" src="js/appmanager.js?2"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
@@ -38,31 +39,6 @@
                 </icon>
             </desktop>
             <windows>
-                <window>
-                    <titlebar>
-                        <img src="images/icons/netbeans.png" alt="icon"/>
-                        <span class="window_title">Control Panel</span>
-                        <span class="window_controls">
-                            <span class="control min"><span class="sprite_icon min"></span></span><span class="control max"><span class="sprite_icon max"></span></span><span class="control close"><span class="sprite_icon close"></span></span>
-                        </span>
-                    </titlebar>
-                    <content>
-                        asd
-                    </content>
-                </window>
-                <window class="max">
-                    <titlebar>
-                        <img src="images/icons/cstrike.png" alt="icon"/>
-                        <span class="window_title">Hello</span>
-                        <span class="window_controls">
-                            <span class="control min"><span class="sprite_icon min"></span></span><span class="control max"><span class="sprite_icon max"></span></span><span class="control close"><span class="sprite_icon close"></span></span>
-                        </span>
-                    </titlebar>
-                    <content>
-                        ertert
-                    </content>
-                </window>
-
             </windows>
         	<taskbar>
                 <startmenupanel>
@@ -178,6 +154,14 @@
                 <startmenu>
                     <img src="css/images/startmenu_hover.png"/>
                 </startmenu>
+                <quicklaunch>
+                </quicklaunch>
+                <tasks>
+                </tasks>
+                <notifications>
+                </notifications>
+                <datetime>
+                </datetime>
                 <areopeak></areopeak>
             </taskbar>
         </screen>
