Add StartApp intergrate with windows

--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="js/lib/soundjs-0.5.0.min.js"></script>
 
         <script type="text/javascript" src="../shared/js/dqt.js"></script>
+        <script type="text/javascript" src="js/helper.js"></script>
         <script type="text/javascript" src="js/windows.js"></script>
         <script type="text/javascript" src="js/windowsmanager.js"></script>
         <script type="text/javascript" src="js/appmanager.js?2"></script>
