Added ChessJS game, implemented full screen button

--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -52,7 +52,14 @@
                                 <span>My blog</span>
                             </div>
                         </div>
-
+                        <div class="recent_program_item" appname="chessjs">
+                            <div class="icon">
+                                <img src="images/icons/chessjs.png"/>
+                            </div>
+                            <div class="program_name">
+                                <span>ChessJS</span>
+                            </div>
+                        </div>
                         <div class="recent_program_item" appname="cstrike">
                             <div class="icon">
                                 <img src="images/icons/cstrike.png"/>
