Add Random Chat app

--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -60,6 +60,14 @@
                                 <span>ChessJS</span>
                             </div>
                         </div>
+                        <div class="recent_program_item" appname="randomchat">
+                            <div class="icon">
+                                <img src="images/icons/randomchat.png"/>
+                            </div>
+                            <div class="program_name">
+                                <span>Random Chat</span>
+                            </div>
+                        </div>
                         <div class="recent_program_item" appname="cstrike">
                             <div class="icon">
                                 <img src="images/icons/cstrike.png"/>
@@ -100,14 +108,6 @@
                             </div>
                             <div class="program_name">
                                 <span>Google Chrome</span>
-                            </div>
-                        </div>
-                        <div class="recent_program_item">
-                            <div class="icon">
-                                <img src="images/icons/paint.png" />
-                            </div>
-                            <div class="program_name">
-                                <span>Paint</span>
                             </div>
                         </div>
                         <div class="recent_program_item">
