--- a/www/windows7/index.html
+++ b/www/windows7/index.html
@@ -19,7 +19,7 @@
         <script type="text/javascript" src="js/helper.js"></script>
         <script type="text/javascript" src="js/windows.js"></script>
         <script type="text/javascript" src="js/windowsmanager.js"></script>
-        <script type="text/javascript" src="js/appmanager.js?2"></script>
+        <script type="text/javascript" src="js/appmanager.js?3"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
@@ -60,12 +60,28 @@
                                 <span>ChessJS</span>
                             </div>
                         </div>
-                        <div class="recent_program_item" appname="randomchat">
+                        <div class="recent_program_item" appname="sing">
                             <div class="icon">
-                                <img src="images/icons/randomchat.png"/>
+                                <img src="images/icons/sing.png"/>
                             </div>
                             <div class="program_name">
-                                <span>Random Chat</span>
+                                <span>Sing the right songs</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item" appname="schoolrevisiontool">
+                            <div class="icon">
+                                <img src="images/icons/schoolrevisiontool.png"/>
+                            </div>
+                            <div class="program_name">
+                                <span>Learn it by heart</span>
+                            </div>
+                        </div>
+                        <div class="recent_program_item" appname="smartdoge">
+                            <div class="icon">
+                                <img src="images/icons/smartdoge.png"/>
+                            </div>
+                            <div class="program_name">
+                                <span>Smart Doge</span>
                             </div>
                         </div>
                         <div class="recent_program_item" appname="cstrike">
@@ -77,31 +93,23 @@
                             </div>
                         </div>
 
-                        <div class="recent_program_item" appname="learnj">
-                            <div class="icon">
-                                <img src="images/icons/learnj.png" />
-                            </div>
-                            <div class="program_name">
-                                <span>Learn Japanese</span>
-                            </div>
-                        </div>
+                        <!--<div class="recent_program_item" appname="learnj">-->
+                            <!--<div class="icon">-->
+                                <!--<img src="images/icons/learnj.png" />-->
+                            <!--</div>-->
+                            <!--<div class="program_name">-->
+                                <!--<span>Learn Japanese</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
                         <div class="recent_program_item" appname="github">
                             <div class="icon">
                                 <img src="images/icons/github.png" />
                             </div>
                             <div class="program_name">
-                                <span>Fork me on GitHub</span>
+                                <span>My GitHub</span>
                             </div>
                         </div>
 
-                        <div class="recent_program_item">
-                            <div class="icon">
-                                <img src="images/icons/netbeans.png" />
-                            </div>
-                            <div class="program_name">
-                                <span>Netbeans 6.9.1</span>
-                            </div>
-                        </div>
                         <div class="recent_program_item">
                             <div class="icon">
                                 <img src="images/icons/chrome.png"/>
