--- a/windows7/index.html
+++ b/windows7/index.html
@@ -101,12 +101,12 @@
                                 <!--<span>Learn Japanese</span>-->
                             <!--</div>-->
                         <!--</div>-->
-                        <div class="recent_program_item" appname="github">
+                        <div class="recent_program_item" appname="github_explorer">
                             <div class="icon">
-                                <img src="images/icons/github.png" />
+                                <img src="images/icons/github_explorer.png" />
                             </div>
                             <div class="program_name">
-                                <span>My GitHub</span>
+                                <span>GitHub Explorer</span>
                             </div>
                         </div>
 
