Force clear cache

--- a/windows7/index.html
+++ b/windows7/index.html
@@ -15,11 +15,11 @@
         <script type="text/javascript" src="js/lib/preloadjs-0.4.0.min.js"></script>
         <script type="text/javascript" src="js/lib/soundjs-0.5.0.min.js"></script>
 
-        <script type="text/javascript" src="../shared/js/dqt.js"></script>
+        <script type="text/javascript" src="../shared/js/dqt.js?2"></script>
         <script type="text/javascript" src="js/helper.js"></script>
         <script type="text/javascript" src="js/windows.js"></script>
         <script type="text/javascript" src="js/windowsmanager.js"></script>
-        <script type="text/javascript" src="js/appmanager.js?3"></script>
+        <script type="text/javascript" src="js/appmanager.js?4"></script>
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
