--- a/game/cstrike/index.html
+++ b/game/cstrike/index.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="js/lib/soundjs-0.5.0.min.js"></script>
 
         
-        <script type="text/javascript" src="../../shared/js/dqt.js"></script>
+        <script type="text/javascript" src="../../shared/js/dqt.js?3"></script>
         <script type="text/javascript" src="js/helper.js"></script>
         <script type="text/javascript" src="js/csclipboard.js"></script>
         <script type="text/javascript" src="js/cmdfactory.js"></script>
