--- a/windows7/index.html
+++ b/windows7/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Welcome!</title>
+        <meta name="google-site-verification" content="ze4yjKLbUCmRbS32YQIVd1chaN26BT04Bxaok7170KI" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="icon" type="image/png" href="css/images/favicon.ico">
 
