--- a/windows7/index.html
+++ b/windows7/index.html
@@ -55,12 +55,12 @@ ga('send', 'pageview');
         	<taskbar>
                 <startmenupanel>
                     <div id="recent_program">
-                        <div class="recent_program_item" appname="wordpress">
+                        <div class="recent_program_item" appname="devutils">
                             <div class="icon">
-                                <img src="images/icons/wordpress.png" />
+                                <img src="images/icons/devutils.png" />
                             </div>
                             <div class="program_name">
-                                <span>My blog</span>
+                                <span>DevUtils.app</span>
                             </div>
                         </div>
                         <div class="recent_program_item" appname="chessjs">
@@ -84,7 +84,7 @@ ga('send', 'pageview');
                                 <img src="images/icons/schoolrevisiontool.png"/>
                             </div>
                             <div class="program_name">
-                                <span>Learn it by heart</span>
+                                <span>Memory Training Tool</span>
                             </div>
                         </div>
                         <div class="recent_program_item" appname="smartdoge">
@@ -129,20 +129,20 @@ ga('send', 'pageview');
                                 <span>Google Chrome</span>
                             </div>
                         </div>
-                        <div class="recent_program_item">
+                        <div class="recent_program_item" appname="flamehackernews">
                             <div class="icon">
-                                <img src="images/icons/war3.png" />
+                                <img src="images/icons/flamechart.png" />
                             </div>
                             <div class="program_name">
-                                <span>World of Warcraft</span>
+                                <span>Flame Hacker News</span>
                             </div>
                         </div>
-                        <div class="recent_program_item">
+                        <div class="recent_program_item" appname="thesimpleapi">
                             <div class="icon">
-                                <img src="images/icons/photoshop.png" />
+                                <img src="images/icons/cog.svg" />
                             </div>
                             <div class="program_name">
-                                <span>Photoshop CS6</span>
+                                <span>The Simple API</span>
                             </div>
                         </div>
                         <div id="bottom_bar">
@@ -171,7 +171,7 @@ ga('send', 'pageview');
                     </div>
                     <div id="avatar">
                         <div class="mask"></div>
-                        <img src="images/TrungDQ_150x150.jpg"/>
+                        <img src="images/photo.png"/>
                     </div>
                     <div id="powerbutton">
                         <span class="glass-button">Shut down</span>
