--- a/windows7/index.html
+++ b/windows7/index.html
@@ -131,7 +131,7 @@ ga('send', 'pageview');
                         </div>
                         <div class="recent_program_item" appname="flamehackernews">
                             <div class="icon">
-                                <img src="images/icons/flamechart.png" />
+                                <img src="images/icons/flamehackernews.png" />
                             </div>
                             <div class="program_name">
                                 <span>Flame Hacker News</span>
@@ -139,7 +139,7 @@ ga('send', 'pageview');
                         </div>
                         <div class="recent_program_item" appname="thesimpleapi">
                             <div class="icon">
-                                <img src="images/icons/cog.svg" />
+                                <img src="images/icons/thesimpleapi.png" />
                             </div>
                             <div class="program_name">
                                 <span>The Simple API</span>
